# haskell-multi-package-demo1

./: ChangeLog.md  haskell-multi-proj-demo1.cabal  stack.yaml
dep1/: ChangeLog.md  dep1.cabal
dep1/src/: Dep1.hs
dep2/: ChangeLog.md  dep2.cabal
dep2/src/: Dep2.hs
src/: Main.hs
