name:                haskell-multi-proj-demo1
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jacob Mitchell
maintainer:          jacob.mitchell@iohk.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-multi-proj-demo1
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , dep1
                     , dep2
  hs-source-dirs:      src
  default-language:    Haskell2010
